Bug 157263 - >2-minutes timesteps are not correct
Summary: >2-minutes timesteps are not correct
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Jasem Mutlaq
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-06 16:30 UTC by Frederik Schwarzer
Modified: 2009-08-26 23:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik Schwarzer 2008-02-06 16:30:22 UTC
Version:           1.3.0 (using KDE 4.0.0)
Installed from:    Debian testing/unstable Packages

The time scales above 2 minutes are not correct (if I understand it right)
"1 sec", "2 sec" ... "1 min" all set the given step per second.
"2 min" sets about 30 minutes per second, "5 min" sets about 2 hours per second, ...

Or do I just not see the clue?
Comment 1 kstars 2008-02-06 17:28:40 UTC
You are right, the exact definition of the timestep changes at a
particular timescale.  It should be "10 min" though, not 2 min.  For
timesteps up to 10 min, time passes at a rate of "X per second".  At
10 min and above, the context switches, and instead, every frame
displayed is X later than the previous one.  For example, when set to
"10 min", you'll notice that the values of the seconds and
single-minute digits do not change, and the ten-minute digit advances
by one on each timestep.

I know this is an inconsistency, but I think it's valuable to make
this transition at some point when going to larger timesteps.  For
example, you can set the timestep to "1 day", point south at noon, and
then start the clock.  You will then be able to watch the Sun move up
and down in the sky as the year progresses, illustrating the reason
that we have seasons.  You could not do that if the "1 day" timestep
meant "make time pass at 1 day per second, showing many frames at
random time intervals".

I suppose the same effect could be achieved even if we did change the
meaning of large timesteps, by pausing the clock and using the "change
time by a single step" action (mapped to ">" and "<" in the default
en_US layout).  Unless there's good reasons for changing the current
setup, I'm inclined to leave it as it is.

I've CC'd the kstars-devel list in case other devs want to chime in.



On 6 Feb 2008 15:30:23 -0000, Frederik Schwarzer <schwarzerf@gmail.com> wrote:
[bugs.kde.org quoted mail]
Comment 2 Akarsh Simha 2008-12-21 00:56:32 UTC
The best way to resolve this bug is to fix the what's this help for the time step spinbox which doesn't make this clear.

We can't do this for KDE 4.2 because of the string freeze. This could be done after the string freeze is lifted around late January.
Comment 3 Jasem Mutlaq 2009-08-26 16:28:57 UTC
Akarsh, can you please fix this issue in SVN Trunk?
Comment 4 Akarsh Simha 2009-08-26 23:02:12 UTC
SVN commit 1016042 by asimha:

Adding a tooltip to the Time Step box describing the behaviour of the
time step in KStars. 

This is my solution to bug 157263. Please reopen if there's a better
way of fixing this.

CCMAIL: kstars-devel@kde.org
BUG: 157263



 M  +4 -0      kstarsinit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016042