Adding a tooltip to the Time Step box describing the behaviour of the time step in KStars.

This is my solution to bug 157263. Please reopen if there's a better
way of fixing this.

CCMAIL: kstars-devel@kde.org
BUG: 157263


svn path=/trunk/KDE/kdeedu/kstars/; revision=1016042